--- a/about.html
+++ b/about.html
@@ -355,8 +355,8 @@
                                     <div class="margin-bottom margin-small">
                                         <h2>A powerful CRM that handles it all</h2>
                                     </div>
-                                    <div>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                                        fugiat nulla pariatur.</div>
+                                    <!-- <div>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                                        fugiat nulla pariatur.</div> -->
                                 </div>
                                 <div class="cards-grid">
                                     <div id="w-node-_44ee4bdd-18c7-67cd-7a21-fb37d732578a-d732577c" class="cards-item">
@@ -367,8 +367,8 @@
                                             <h3>Customer Support</h3>
                                         </div>
                                         <div class="margin-bottom margin-medium">
-                                            <div>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-                                                dolore eu fugiat nulla pariatur.</div>
+                                            <!-- <div>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                                                dolore eu fugiat nulla pariatur.</div> -->
                                         </div>
                                         <!-- <a href="#" class="link white w-inline-block">
                                             <div>Learn more</div><img
@@ -385,8 +385,8 @@
                                             <h3>Employee Experience</h3>
                                         </div>
                                         <div class="margin-bottom margin-medium">
-                                            <div>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-                                                dolore eu fugiat nulla pariatur.</div>
+                                            <!-- <div>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                                                dolore eu fugiat nulla pariatur.</div> -->
                                         </div>
                                         <!-- <a href="#" class="link white w-inline-block">
                                             <div>Learn more</div><img
@@ -403,8 +403,8 @@
                                             <h3>Qualifies leads</h3>
                                         </div>
                                         <div class="margin-bottom margin-medium">
-                                            <div>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-                                                dolore eu fugiat nulla pariatur.</div>
+                                            <!-- <div>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                                                dolore eu fugiat nulla pariatur.</div> -->
                                         </div>
                                         <!-- <a href="#" class="link white w-inline-block">
                                             <div>Learn more</div><img
@@ -413,7 +413,7 @@
                                             <div class="link-line white"></div>
                                         </a> -->
                                     </div>
-                                </div><a href="/signup" class="button w-button">Get Started</a>
+                                </div><a href="#schedule" class="button w-button">Get Started</a>
                             </div>
                         </div>
                     </div>
