--- a/services.html
+++ b/services.html
@@ -284,8 +284,7 @@
                                                 style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
                                         </div>
                                         <div class="faq-answer" style="height: 0px;">
-                                            <div>Sed sed risus pretium quam vulputate. Non blandit massa enim nec dui
-                                                nunc mattis.</div>
+                                            <div>I'm sorry to say that offering free trials to everyone is not feasible. Running social media campaigns takes both time and financial resources, and we would be incurring significant losses if we did not charge for them.</div>
                                         </div>
                                     </div>
                                     <div class="faq-item"
@@ -297,8 +296,11 @@
                                                 style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
                                         </div>
                                         <div class="faq-answer" style="height: 0px;">
-                                            <div>Sed sed risus pretium quam vulputate. Non blandit massa enim nec dui
-                                                nunc mattis.</div>
+                                            <div>
+                                                Your commitment is required to reach the top of your industry.
+                                                You have the capacity to accommodate an increase of 30 to 50 additional clients each month.
+                                                It's crucial for you to acknowledge that our pricing is not limited to $100 or $1000.
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="faq-item"
@@ -310,8 +312,7 @@
                                                 style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
                                         </div>
                                         <div class="faq-answer" style="height: 0px;">
-                                            <div>Sed sed risus pretium quam vulputate. Non blandit massa enim nec dui
-                                                nunc mattis.</div>
+                                            <div>Our pricing is reasonable. Exceptional work of high value requires compensation, and while we won't overcharge, we do believe in fairly compensating all involved. Our project pricing reflects this belief.</div>
                                         </div>
                                     </div>
                                     <!-- <div class="faq-item"
@@ -335,8 +336,9 @@
                                                 style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
                                         </div>
                                         <div class="faq-answer" style="height: 0px;">
-                                            <div>Sed sed risus pretium quam vulputate. Non blandit massa enim nec dui
-                                                nunc mattis.</div>
+                                            <div>
+                                                The results of our approach can vary based on a number of factors such as the size of your business, your industry, and the current state of your marketing efforts. However, we typically see significant improvements within the first few months of implementing our strategies. This can include increased website traffic, higher conversion rates, and a noticeable boost in brand awareness. Of course, the exact timeline will depend on the specific goals and objectives that we set for your business. Nevertheless, our goal is to help you see tangible results as quickly and efficiently as possible.
+                                            </div>
                                         </div>
                                     </div>
                                     <!-- <div class="faq-item" style="opacity: 0;">
