Added Calendly links

--- a/about.html
+++ b/about.html
@@ -48,13 +48,13 @@
                                     <!-- <a href="case-study" class="navbar-link w-nav-link">Case Study</a> -->
                                     <!-- <a href="contact" class="navbar-link w-nav-link">Contact</a> -->
                                     <!-- <a href="/login" class="navbar-link hide-desktop w-nav-link">Login</a> -->
-                                    <a href="#schedule" class="button navbar-button hide-desktop w-button">Book a
+                                    <a href="https://calendly.com/arclight-agency/consultation" class="button navbar-button hide-desktop w-button">Book a
                                         Call</a>
                                 </div>
                             </nav>
                             <div class="navbar-buttons-wrapper">
                                 <!-- <a href="/login" class="navbar-link hide-tablet w-nav-link">Login</a> -->
-                                <a href="contact" class="button navbar-button hide-tablet w-button">Book a Call</a>
+                                <a href="https://calendly.com/arclight-agency/consultation" class="button navbar-button hide-tablet w-button">Book a Call</a>
                             </div>
                             <div class="navbar-menu-button w-nav-button">
                                 <div class="w-icon-nav-menu"></div>
@@ -496,7 +496,7 @@
                                             <div class="link-line white"></div>
                                         </a> -->
                                     </div>
-                                </div><a href="#schedule" class="button w-button">Get Started</a>
+                                </div><a href="https://calendly.com/arclight-agency/consultation" class="button w-button">Get Started</a>
                             </div>
                         </div>
                     </div>
@@ -516,7 +516,7 @@
                                         <div class="margin-bottom margin-large">
                                             <div>Schedule a call with us to get started</div>
                                         </div>
-                                        <a href="https://calendly.com" class="button white-bg w-button">Book a Call</a>
+                                        <a href="https://calendly.com/arclight-agency/consultation" class="button white-bg w-button">Book a Call</a>
                                     </div>
                                     <img src="https://assets.website-files.com/63787459a77f8c1ad0b0df9e/637b654b69bf649945444efb_Ellipse%20569.png"
                                         loading="lazy" alt="" class="cta-main-image-asset" />
