--- a/privacy.html
+++ b/privacy.html
@@ -109,12 +109,12 @@
                                                 <!-- <a href="case-study" class="navbar-link w-nav-link">Case Study</a> -->
                                                 <!-- <a href="/contact" class="navbar-link w-nav-link">Contact</a> -->
                                                 <!-- <a href="/login" class="navbar-link hide-desktop w-nav-link">Login</a> -->
-                                                <a href="contact" class="button navbar-button hide-desktop w-button">Book a Call</a>
+                                                <a href="https://calendly.com/arclight-agency/consultation" class="button navbar-button hide-desktop w-button">Book a Call</a>
                                             </div>
                                         </nav>
                                         <div class="navbar-buttons-wrapper">
                                             <!-- <a href="/login" class="navbar-link hide-tablet w-nav-link">Login</a> -->
-                                            <a href="contact" class="button navbar-button hide-tablet w-button">Book a Call</a>
+                                            <a href="https://calendly.com/arclight-agency/consultation" class="button navbar-button hide-tablet w-button">Book a Call</a>
                                         </div>
                                         <div class="navbar-menu-button w-nav-button">
                                             <div class="w-icon-nav-menu"></div>
