--- a/about.html
+++ b/about.html
@@ -582,8 +582,8 @@
                             </div>
                             <div class="footer-down">
                                 <div class="footer-copyright-text">
-                                    Copyright © 2023 Arclight Agency. <br>Built by <a href="https://airae.agency"
-                                        class="footer-link-2">Airae Agency</a>
+                                    Copyright © 2023 Arclight Agency.
+                                     
                                 </div>
                                 <div class="social-links-container">
                                     <a href="https://www.linkedin.com/company/arclighta/" target="_blank"
