--- a/about.html
+++ b/about.html
@@ -137,8 +137,8 @@
                                                 </div>
                                                 <div class="margin-bottom margin-small">
                                                     <div>Arclight uses automated nurturing conversations to build trust
-                                                        with leads before connecting them with sales reps who then book
-                                                        appointments and close deals via calls or texts.</div>
+                                                        with leads before connecting them with sales reps who then attend
+                                                        pre-set appointments and close deals.</div>
                                                 </div>
                                                 <!-- <a href="#" class="link w-inline-block">
                                                     <div>Learn more</div><img
