--- a/about.html
+++ b/about.html
@@ -328,11 +328,11 @@
                                     <div class="margin-bottom margin-medium">
                                         <h2>Our Mission</h2>
                                     </div>
-                                    <div>Arclight is driven by a mission to your businesses grow and
+                                    <div>Arclight is driven by a mission to help businesses grow and
                                         succeed. We understand that in today's competitive landscape, standing out from
                                         the crowd is crucial. That's why we offer a wide range of marketing services
                                         designed to help you reach your target audience and achieve your business goals.
-                                        Our team of experts is dedicated to staying up-to-date on the latest marketing
+                                        Our team of experts are dedicated to staying up-to-date on the latest marketing
                                         trends and techniques to ensure that our clients receive the most effective and
                                         innovative solutions. 
                                         <br><br>We take pride in our ability to deliver measurable results and help our clients achieve
