--- a/services.html
+++ b/services.html
@@ -154,7 +154,7 @@
                                             <h3>Automated CRM &amp; Lead Nurturing</h3>
                                         </div>
                                         <div class="margin-bottom margin-medium">
-                                            <div>The A.I Solar System includes an automated CRM platform that initiates conversations with leads that opt in to nurture them before connecting them with sales reps who call or text to book in the appointment and close the deal.</div>
+                                            <div>The A.I Solar System includes an automated CRM platform that initiates conversations with leads that opt in to nurture them before connecting them with sales reps who then attend pre-set appointments and close the deal.</div>
                                         </div>
                                         <!-- <a href="#" class="link white w-inline-block" style="">
                                             <div>Learn more</div>
@@ -289,7 +289,7 @@
                                     <div class="faq-item"
                                         style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
                                         <div data-w-id="573ecc39-b914-e0fd-4b6e-65792510d711" class="faq-trigger">
-                                            <div>What must I qualify before I work with you?</div><img
+                                            <div>How do I get qualified to work with you?</div><img
                                                 src="https://assets.website-files.com/63787459a77f8c1ad0b0df9e/63834c10210b956d938ebeb5_Group%201000004292.svg"
                                                 loading="lazy" alt="" class="faq-icon"
                                                 style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
@@ -297,8 +297,8 @@
                                         <div class="faq-answer" style="height: 0px;">
                                             <div>
                                                 Your commitment is required to reach the top of your industry.
-                                                You have the capacity to accommodate an increase of 30 to 50 additional clients each month.
-                                                It's crucial for you to acknowledge that our pricing is not limited to $100 or $1000.
+                                                You have the capacity to accommodate an increase of 10 to 30 additional clients each month.
+                                                It's crucial for you to acknowledge that an advertising budget is required.
                                             </div>
                                         </div>
                                     </div>
@@ -336,7 +336,7 @@
                                         </div>
                                         <div class="faq-answer" style="height: 0px;">
                                             <div>
-                                                The results of our approach can vary based on a number of factors such as the size of your business, your industry, and the current state of your marketing efforts. However, we typically see significant improvements within the first few months of implementing our strategies. This can include increased website traffic, higher conversion rates, and a noticeable boost in brand awareness. Of course, the exact timeline will depend on the specific goals and objectives that we set for your business. Nevertheless, our goal is to help you see tangible results as quickly and efficiently as possible.
+                                                The results of our approach can vary based on a number of factors such as the size of your business, your industry, and the current state of your marketing efforts. However, we typically see significant improvements within the first few weeks of implementing our strategies. This can include increased website traffic, higher conversion rates, and a noticeable boost in booked appointments. Of course, the exact timeline will depend on the specific goals and objectives that we set for your business. Nevertheless, our goal is to help you see tangible results as quickly and efficiently as possible.
                                             </div>
                                         </div>
                                     </div>
