--- a/about.html
+++ b/about.html
@@ -201,8 +201,8 @@
                                                 </div>
                                                 <div class="margin-bottom margin-small">
                                                     <div>Arclight sets up ad campaigns on TikTok for clients, using an
-                                                        automated CRM platform with A.I. to nurture leads, connecting
-                                                        them with sales reps for booking appointments and closing deals.
+                                                        automated CRM platform with A.I. to nurture leads, then sets appointments to connect
+                                                        them with your sales reps to close deals.
                                                     </div>
                                                 </div>
                                                 <!-- <a href="#" class="link w-inline-block">
