--- a/services.html
+++ b/services.html
@@ -329,7 +329,7 @@
                                     </div> -->
                                     <div class="faq-item" style="opacity: 0;">
                                         <div data-w-id="573ecc39-b914-e0fd-4b6e-65792510d729" class="faq-trigger">
-                                            <div>How quickly do I get to see results with your approach</div><img
+                                            <div>How quickly do I get to see results with your approach?</div><img
                                                 src="https://assets.website-files.com/63787459a77f8c1ad0b0df9e/63834c10210b956d938ebeb5_Group%201000004292.svg"
                                                 loading="lazy" alt="" class="faq-icon"
                                                 style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
