--- a/contact.html
+++ b/contact.html
@@ -153,7 +153,7 @@
                                             <div class="margin-bottom margin-large">
                                                 <div>Schedule a call with us to get started</div>
                                             </div>
-                                            <a href="https://calendly.com" class="button white-bg w-button">Get Started</a>
+                                            <a href="https://aisolarsystems.co/calendar-1755" class="button white-bg w-button">Get Started</a>
                                         </div>
                                         <img src="https://assets.website-files.com/63787459a77f8c1ad0b0df9e/637b654b69bf649945444efb_Ellipse%20569.png" loading="lazy" alt="" class="cta-main-image-asset"/>
                                     </div>
