--- a/terms.html
+++ b/terms.html
@@ -451,7 +451,7 @@
                                                         <p>Although it is highly unlikely, This policy may be changed at any time at our discretion. If we should update this policy, we will post the updates to this page on our Website.</p>
                                                         <p></p>
                                                         <p>If you have any questions or concerns regarding our privacy policy please direct them to: &nbsp;</p>
-                                                        <p><a target="_blank" rel="noopener noreferrer nofollow" href="daniel@arclight-agency.com">support@arclight-agency.com</a></p>
+                                                        <p><a target="_blank" rel="noopener noreferrer nofollow" href="kadian@arclight-agency.com">support@arclighta.com</a></p>
                                                     </div>
                                                 </div>
                                                 <!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!---->
@@ -476,7 +476,7 @@
                                             <img src="assets/logo dark.png" loading="lazy" alt="" class="footer-logo-image"/>
                                         </a>
                                         <div>Arclight is a dedicated online marketing agency, focused on maximizing your solar company's online growth potential and creating the perfect marketing strategy for your brand.</div>
-                                        <div style="margin-top: 30px"><a class="footer-link-2" href="mailto:daniel@arclight-agency.com" target="_blank">Email Us</a></div>
+                                        <div style="margin-top: 30px"><a class="footer-link-2" href="mailto:kadian@arclight-agency.com" target="_blank">Email Us</a></div>
                                     </div>
                                     <div class="footer-columns-container">
                                         <div id="w-node-f0fa3338-e174-7858-5f88-9069a25483ad-a25483a1" class="footer-column">
