--- a/terms.html
+++ b/terms.html
@@ -451,7 +451,7 @@
                                                         <p>Although it is highly unlikely, This policy may be changed at any time at our discretion. If we should update this policy, we will post the updates to this page on our Website.</p>
                                                         <p></p>
                                                         <p>If you have any questions or concerns regarding our privacy policy please direct them to: </p>
-                                                        <p><a target="_blank" rel="noopener noreferrer nofollow" href="kadian@arclight-agency.com">support@arclighta.com</a></p>
+                                                        <p>[<a target="_blank" rel="noopener noreferrer nofollow" href="mailto:kadian@arclight-agency.com">support@arclighta.com</a>]</p>
                                                     </div>
                                                 </div>
                                                 <!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!---->
