--- a/services.html
+++ b/services.html
@@ -180,7 +180,7 @@
                                     </div>
                                     
                                 </div>
-                                <a href="https://aisolarsystems.co/calendar-1755" class="button w-button">Get Started</a>
+                                <a href="https://aisolarsystems.co/service-packages" class="button w-button">Get Started</a>
                             </div>
                         </div>
                     </div>
