--- a/about.html
+++ b/about.html
@@ -496,7 +496,7 @@
                                             <div class="link-line white"></div>
                                         </a> -->
                                     </div>
-                                </div><a href="https://aisolarsystems.co/calendar-1755" class="button w-button">Get Started</a>
+                                </div><a href="https://aisolarsystems.co/service-packages" class="button w-button">Get Started</a>
                             </div>
                         </div>
                     </div>
