--- a/services.html
+++ b/services.html
@@ -283,7 +283,7 @@
                                                 style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
                                         </div>
                                         <div class="faq-answer" style="height: 0px;">
-                                            <div>I'm sorry to say that offering free trials to everyone is not feasible. Running social media campaigns takes both time and financial resources, and we would be incurring significant losses if we did not charge for them.</div>
+                                            <div>We are excited to announce that we are now offering a 7-day free trial! While it's not feasible to offer free trials to everyone indefinitely, we understand that trying our software before committing to a purchase is important. Therefore, we've allocated the necessary time and resources to offer this trial period, and we hope it helps you make an informed decision about our services.</div>
                                         </div>
                                     </div>
                                     <div class="faq-item"
