--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8" />
     <title>Arclight Agency - About</title>
     <meta
-        content="Arclight is a dedicated online marketing agency, focused on maximizing your solar company's online growth potential and creating the perfect marketing strategy for your brand."
+        content="Arclight is a dedicated online marketing agency, focused on maximizing your company's online growth potential and creating the perfect marketing strategy for your brand."
         name="description" />
     <meta content="Arclight Agency - About" property="og:title" />
     <!-- <meta content="Sense is an easy to use webflow template for your startup. Sense features a clean and modern design, with ample space for showcasing your products or services, as well as highlighting your team, mission, and vision." property="og:description"/> -->
@@ -48,13 +48,13 @@
                                     <!-- <a href="case-study" class="navbar-link w-nav-link">Case Study</a> -->
                                     <!-- <a href="contact" class="navbar-link w-nav-link">Contact</a> -->
                                     <!-- <a href="/login" class="navbar-link hide-desktop w-nav-link">Login</a> -->
-                                    <a href="https://aisolarsystems.co/calendar-1755" class="button navbar-button hide-desktop w-button">Book a
+                                    <a href="https://arclighta.info/calendar-8669" class="button navbar-button hide-desktop w-button">Book a
                                         Call</a>
                                 </div>
                             </nav>
                             <div class="navbar-buttons-wrapper">
                                 <!-- <a href="/login" class="navbar-link hide-tablet w-nav-link">Login</a> -->
-                                <a href="https://aisolarsystems.co/calendar-1755" class="button navbar-button hide-tablet w-button">Book a Call</a>
+                                <a href="https://arclighta.info/calendar-8669" class="button navbar-button hide-tablet w-button">Book a Call</a>
                             </div>
                             <div class="navbar-menu-button w-nav-button">
                                 <div class="w-icon-nav-menu"></div>
@@ -85,7 +85,7 @@
                                         <div style="opacity:0;-webkit-transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)"
                                             class="animation-load-3">
                                             <div>Arclight is a dedicated online marketing agency, focused on maximizing
-                                                your solar company's online growth potential and creating the perfect
+                                                your company's online growth potential and creating the perfect
                                                 marketing strategy for your brand.
                                             </div>
                                         </div>
@@ -356,7 +356,7 @@
                                     <div class="margin-bottom margin-medium">
                                         <h2>Tailored solutions for unique business needs</h2>
                                     </div>
-                                    <div>We are dedicated to getting your solar business clients and make sure you get a
+                                    <div>We are dedicated to getting your assisting your business and making sure you get a
                                         return on your investment.</div>
                                     <div class="feature-divider-line"></div>
                                     <!-- <div class="pointers-feature-testimonial-wrapper"><img
@@ -496,7 +496,7 @@
                                             <div class="link-line white"></div>
                                         </a> -->
                                     </div>
-                                </div><a href="https://aisolarsystems.co/service-packages" class="button w-button">Get Started</a>
+                                </div><a href="https://arclighta.info/crm" class="button w-button">Get Started</a>
                             </div>
                         </div>
                     </div>
@@ -516,7 +516,7 @@
                                         <div class="margin-bottom margin-large">
                                             <div>Schedule a call with us to get started</div>
                                         </div>
-                                        <a href="https://aisolarsystems.co/calendar-1755" class="button white-bg w-button">Book a Call</a>
+                                        <a href="https://arclighta.info/calendar-8669" class="button white-bg w-button">Book a Call</a>
                                     </div>
                                     <img src="https://assets.website-files.com/63787459a77f8c1ad0b0df9e/637b654b69bf649945444efb_Ellipse%20569.png"
                                         loading="lazy" alt="" class="cta-main-image-asset" />
@@ -540,7 +540,7 @@
                                             class="footer-logo-image" />
                                     </a>
                                     <div>Arclight is a dedicated online marketing agency, focused on maximizing your
-                                        solar company's online growth potential and creating the perfect marketing
+                                        company's online growth potential and creating the perfect marketing
                                         strategy for your brand.
                                         <div style="margin-top: 30px"><a class="footer-link-2"
                                                 href="mailto:daniel@arclight-agency.com" target="_blank">Email Us</a>
