--- a/contact.html
+++ b/contact.html
@@ -117,7 +117,7 @@
                                 <div class="home-hero-component">
                                     <div id="w-node-_09707357-6298-b30e-cec5-397665dccf17-f7b0dfa1" class="home-hero-content">
                                         <div style="-webkit-transform:translate3d(null, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(null, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(null, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(null, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="animation-load-1">
-                                            <div class="tag">The #1 Solar Installation Marketing Agency</div>
+                                            <div class="tag">The #1 Construction Marketing Agency</div>
                                         </div>
                                         <div class="margin-bottom margin-medium">
                                             <div style="opacity:0;-webkit-transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="animation-load-2">
@@ -125,7 +125,7 @@
                                             </div>
                                         </div>
                                         <div style="opacity:0;-webkit-transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="animation-load-3">
-                                            <div>Arclight is a dedicated online marketing agency, focused on maximizing your solar company's online growth potential and creating the perfect marketing strategy for your brand with the help of top-notch marketing professionals.</div>
+                                            <div>Arclight is a dedicated online marketing agency, focused on maximizing your company's online growth potential and creating the perfect marketing strategy for your brand with the help of top-notch marketing professionals.</div>
                                         </div>
                                     </div>
                                     <div id="w-node-c9053b85-b2c3-86d4-272e-0759f61d883d-f7b0dfa1" style="opacity:0;-webkit-transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="animation-load-4">
@@ -153,7 +153,7 @@
                                             <div class="margin-bottom margin-large">
                                                 <div>Schedule a call with us to get started</div>
                                             </div>
-                                            <a href="https://aisolarsystems.co/calendar-1755" class="button white-bg w-button">Get Started</a>
+                                            <a href="https://arclighta.info/calendar-8669" class="button white-bg w-button">Get Started</a>
                                         </div>
                                         <img src="https://assets.website-files.com/63787459a77f8c1ad0b0df9e/637b654b69bf649945444efb_Ellipse%20569.png" loading="lazy" alt="" class="cta-main-image-asset"/>
                                     </div>
@@ -174,7 +174,7 @@
                                         <a href="/" aria-current="page" class="footer-logo w-inline-block w--current">
                                             <img src="assets/logo dark.png" loading="lazy" alt="" class="footer-logo-image"/>
                                         </a>
-                                        <div>Arclight is a dedicated online marketing agency, focused on maximizing your solar company's online growth potential and creating the perfect marketing strategy for your brand.</div>
+                                        <div>Arclight is a dedicated online marketing agency, focused on maximizing your company's online growth potential and creating the perfect marketing strategy for your brand.</div>
                                         <div style="margin-top: 30px"><a class="footer-link-2" href="mailto:daniel@arclight-agency.com" target="_blank">Email Us</a></div>
                                     </div>
                                     <div class="footer-columns-container">
