--- a/privacy.html
+++ b/privacy.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="utf-8"/>
         <title>Arclight Agency - Privacy</title>
-        <meta content="Arclight is a dedicated online marketing agency, focused on maximizing your solar company's online growth potential and creating the perfect marketing strategy for your brand." name="description"/>
+        <meta content="Arclight is a dedicated online marketing agency, focused on maximizing your company's online growth potential and creating the perfect marketing strategy for your brand." name="description"/>
         <meta content="Arclight Agency - Privacy" property="og:title"/>
         <!-- <meta content="Sense is an easy to use webflow template for your startup. Sense features a clean and modern design, with ample space for showcasing your products or services, as well as highlighting your team, mission, and vision." property="og:description"/> -->
         <!-- <meta content="https://assets.website-files.com/63787459a77f8c1ad0b0df9e/6399c20dc27c3d68da88ddb9_Frame%20134-min.jpg" property="og:image"/> -->
@@ -109,12 +109,12 @@
                                                 <!-- <a href="case-study" class="navbar-link w-nav-link">Case Study</a> -->
                                                 <!-- <a href="/contact" class="navbar-link w-nav-link">Contact</a> -->
                                                 <!-- <a href="/login" class="navbar-link hide-desktop w-nav-link">Login</a> -->
-                                                <a href="https://aisolarsystems.co/calendar-1755" class="button navbar-button hide-desktop w-button">Book a Call</a>
+                                                <a href="https://arclighta.info/calendar-8669" class="button navbar-button hide-desktop w-button">Book a Call</a>
                                             </div>
                                         </nav>
                                         <div class="navbar-buttons-wrapper">
                                             <!-- <a href="/login" class="navbar-link hide-tablet w-nav-link">Login</a> -->
-                                            <a href="https://aisolarsystems.co/calendar-1755" class="button navbar-button hide-tablet w-button">Book a Call</a>
+                                            <a href="https://arclighta.info/calendar-8669" class="button navbar-button hide-tablet w-button">Book a Call</a>
                                         </div>
                                         <div class="navbar-menu-button w-nav-button">
                                             <div class="w-icon-nav-menu"></div>
@@ -427,7 +427,7 @@
                                         <a href="/" aria-current="page" class="footer-logo w-inline-block w--current">
                                             <img src="assets/logo dark.png" loading="lazy" alt="" class="footer-logo-image"/>
                                         </a>
-                                        <div>Arclight is a dedicated online marketing agency, focused on maximizing your solar company's online growth potential and creating the perfect marketing strategy for your brand.</div>
+                                        <div>Arclight is a dedicated online marketing agency, focused on maximizing your company's online growth potential and creating the perfect marketing strategy for your brand.</div>
                                         <div style="margin-top: 30px"><a class="footer-link-2" href="mailto:daniel@arclight-agency.com" target="_blank">Email Us</a></div>
                                     </div>
                                     <div class="footer-columns-container">
